<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="z_multi_library_album">album</string>
    <string name="z_multi_library_take_photos">take photos</string>
    <string name="z_multi_library_sound_recording">sound recording</string>
    <string name="z_multi_library_setting">setting</string>
    <string name="z_multi_library_close">close</string>
    <string name="z_multi_library_hint">hint</string>
    <string name="z_multi_library_ok">OK</string>
    <string name="z_multi_library_cancel">Cancel</string>
    <string name="z_multi_library_to_use_this_feature">To use this feature</string>
    <string name="z_multi_library_file_read_and_write_permission_to_read_and_store_related_files">\nFile read permission to read related files</string>
    <string name="z_multi_library_file_read_and_write_permission_to_read_and_store_related_files_by_image">\nImage file read permission to read image files</string>
    <string name="z_multi_library_file_read_and_write_permission_to_read_and_store_related_files_by_video">\nVideo file read permission to read video files</string>
    <string name="z_multi_library_record_permission_to_record_sound">\nRecord permission to record sound</string>
    <string name="z_multi_library_record_permission_to_shoot">\nRecord permission to shoot</string>
    <string name="z_multi_library_Otherwise_it_cannot_run_normally_and_will_apply_for_relevant_permissions_from_you">\nOtherwise, it cannot run normally and will apply for relevant permissions from you</string>

    <string name="z_multi_library_in_settings_apply">In Settings-Apply-</string>
    <string name="z_multi_library_enable_storage_and_camera_permissions_for_normal_use_of_related_functions">-Permissions Enable storage and camera permissions for normal use of related functions</string>
    <string name="permission_has_been_set_and_will_no_longer_be_asked">Permission has been set no longer asked, you need to go to the setting interface to start permission  </string>
    <string name="z_multi_library_press_confirm_again_to_close">Press confirm again to close</string>
    <string name="z_multi_library_the_camera_limit_has_been_reached">The camera limit has been reached</string>
    <string name="z_one_of_these_three_albumSetting_camerasSetting_and_recordDerSetting_must_be_set">one of these three albumSetting, camerasSetting, and recordDerSetting must be set</string>

    <string name="compression_failure">Compression failure</string>

    <!-- region 相册 -->

    <string name="z_multi_library_album_name_all">all</string>

    <string name="z_multi_library_button_preview">preview</string>
    <string name="z_multi_library_button_apply_default">use</string>
    <string name="z_multi_library_button_apply">use(%1$d)</string>
    <string name="z_multi_library_button_back">back</string>
    <string name="z_multi_library_button_edit">edit</string>
    <string name="z_multi_library_photo_grid_capture">Take a</string>
    <string name="z_multi_library_empty_text">No pictures or videos yet</string>
    <string name="z_multi_library_default_to_record">Fast recording</string>


    <string name="z_multi_library_error_over_count_default">You have reached the maximum number of choices</string>
    <string name="z_multi_library_error_over_count" tools:ignore="PluralsCandidate">
        <item quantity="one">You can select a maximum of %1$d file</item>
        <item quantity="other">You can select a maximum of %1$d files</item>
    </string>
    <string name="z_multi_library_error_over_count_video" tools:ignore="PluralsCandidate">
        <item quantity="one">You can select a maximum of %1$d video</item>
        <item quantity="other">You can select a maximum of %1$d videos</item>
    </string>
    <string name="z_multi_library_error_over_count_image" tools:ignore="PluralsCandidate">
        <item quantity="one">You can select a maximum of %1$d picture</item>
        <item quantity="other">You can select a maximum of %1$d pictures</item>
    </string>
    <string name="z_multi_library_error_under_quality">Image quality is too low</string>
    <string name="z_multi_library_error_over_quality">Image quality too high</string>
    <string name="z_multi_library_error_file_type">Unsupported file type</string>
    <string name="z_multi_library_error_type_conflict">You cannot select images and videos at the same time</string>
    <string name="z_multi_library_error_no_video_activity">There is no app that supports video preview</string>
    <string name="z_multi_library_error_over_original_size">"If the photo is larger than %1$d M and cannot be uploaded, the original image will be unchecked"</string>
    <string name="z_multi_library_error_over_original_count" tools:ignore="PluralsCandidate">
        <item quantity="one">"If %1$d photo larger than %2$d M\ncannot be uploaded, the original picture will be unchecked"</item>
        <item quantity="other">"If %1$d photos larger than %2$d M\ncannot be uploaded, the original picture will be unchecked"</item>
    </string>
    <string name="z_multi_library_button_original">The original image</string>
    <string name="z_multi_library_button_sure_default">confirm</string>
    <string name="z_multi_library_button_sure">confirm(%1$d)</string>

    <string name="z_multi_library_show_thumbnails">The thumbnail image displayed</string>
    <string name="z_multi_library_gif_label">GIF label</string>

    <string name="z_multi_library_album_num">%1$s (%2$d)</string>

    <!-- endregion -->

    <string name="z_multi_library_light_touch_take_long_press_camera">Tap the camera, long press the camera</string>
    <string name="z_multi_library_light_touch_take">Touch your photo</string>
    <string name="z_multi_library_long_press_camera">Long press camera</string>
    <string name="z_multi_library_light_touch_camera">Touch your camera</string>
    <string name="z_multi_library_touch_your_suspension">Touch your suspension</string>
    <string name="z_multi_library_touch_your_end">Touch your end</string>
    <string name="z_multi_library_long_press_sound_recording">Long press the tape</string>
    <string name="z_multi_library_the_recording_time_is_too_short">The recording time is too short</string>
    <string name="z_long_press_to_continue_recording">Support to continue recording</string>
    <string name="z_multi_library_video_can_only_exist_in_n" tools:ignore="PluralsCandidate">
        <item quantity="one">Only %1$d video can exist</item>
        <item quantity="other">Only %1$d videos can exist</item>
    </string>
    <string name="z_multi_library_watermark">watermark</string>

    <!-- region 录像 -->
    <string name="z_multi_library_path_square">M 35,43 v 34 A 8 8 0 0 0 43,85 h 34 A 8 8 0 0 0 85 77 v -34 A 8 8 0 0 0 77 35 h -34 A 8 8 0 0 0 35 43</string>
    <string name="z_multi_library_path_circle">M 0 60 v 0 A 60 60 0 0 0 60 120 h 0 A 60 60 0 0 0 120 60 v 0 A 60 60 0 0 0 60 0 h 0 A 60 60 0 0 0 0 60</string>
    <string name="z_multi_library_ic_baseline_done">M 3.4 13.4 L 9 19 L 21 7 L 19.6 5.6 L 9 16.2 L 9 16.2 L 4.8 12 L 3.4 13.4</string> <!-- 第一个和完成都是用该图 -->
    <string name="z_multi_library_ic_baseline_stop">M 6 6 L 6 18 L 18 18 L 18 6 L 14.898 6 L 11.878 6 L 8.939 6 L 6 6</string><!-- 暂停图片 -->
    <string name="z_multi_library_delete_button">Delete button</string>
    <string name="z_multi_library_play_button">Play button</string>
    <string name="z_multi_library_choose_to_click_to_confirm_these">You can click to confirm these if you select them</string>
    <string name="z_multi_library_confirm">confirm</string>

    <string name="z_multi_library_working_video_click_later">Do not operate frequently</string>
    <string name="z_multi_library_recording_error_roll_back_previous_paragraph">Recording error, roll back previous paragraph</string>

    <!-- endregion -->


</resources>
