<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhongjh.albumcamerarecorder.widget.SharedAnimationView
        android:id="@+id/sharedAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="关闭按钮"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="HardcodedText" />

        <com.zhongjh.albumcamerarecorder.album.widget.CheckView
            android:id="@+id/checkView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/z_multi_library_choose_to_click_to_confirm_these"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/preview_bottom_toolbar_bg"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:padding="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/z_multi_library_button_edit"
            android:textColor="?attr/preview.bottomToolbar.back.textColor"
            android:textSize="16sp"
            tools:textColor="@color/white" />

        <View
            android:id="@+id/originalLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/original"/>

        <com.zhongjh.albumcamerarecorder.album.widget.CheckRadioView
            android:padding="8dp"
            android:id="@+id/original"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_radio_button_unchecked_white_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:enabled="true"
            android:text="@string/z_multi_library_button_original"
            android:textColor="?attr/preview.bottomToolbar.back.textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/original"
            app:layout_constraintTop_toTopOf="parent"
            tools:textColor="@color/white" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>