<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Zhihu Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="1dp"
            android:theme="?attr/toolbar.zhongjh"
            app:layout_scrollFlags="scroll|enterAlways"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/z_multi_library_delete_button"
                    app:srcCompat="@drawable/ic_close_white_24dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/selectedAlbum"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_white_24dp"
                        android:drawableRight="@drawable/ic_arrow_drop_down_white_24dp"
                        android:foreground="?selectableItemBackground"
                        android:gravity="center"
                        android:textColor="?attr/album.element.color"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.zhongjh.albumcamerarecorder.widget.ControlTouchFrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible" />

            <FrameLayout
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/emptyViewContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/z_multi_library_empty_text"
                    android:textColor="?attr/album.emptyView.textColor"
                    android:textSize="16sp"
                    app:drawableTopCompat="?attr/album.emptyView" />

            </FrameLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/bottomToolbar.bg"
        android:elevation="1dp"
        android:layout_gravity="bottom|end"
        app:layout_behavior="com.zhongjh.albumcamerarecorder.widget.BottomBarBehavior">

        <TextView
            android:id="@+id/buttonPreview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/z_multi_library_button_preview"
            android:textColor="?attr/bottomToolbar.preview.textColor"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/originalLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:foreground="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible"
            tools:showIn="@layout/fragment_matiss_zjh">

            <com.zhongjh.albumcamerarecorder.album.widget.CheckRadioView
                android:id="@+id/original"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_radio_button_unchecked_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="true"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:text="@string/z_multi_library_button_original"
                android:textColor="?attr/bottomToolbar.preview.textColor"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:id="@+id/buttonApply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="?attr/bottomToolbar.apply.textColor"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:indeterminateTint="?attr/bottomToolbar.apply.textColor"
            android:indeterminateTintMode="src_atop"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

